welcome.lessons.welcome.bat.bool1.Max1020.scala.error
max1020:8: error: type mismatch;
 found   : Unit
 required: Int
}else if(m>9 && m<21){
      ^